--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "next": "12.0.4",
     "react": "17.0.2",
